--- a/app/propmanagement/core/templates/core/property_manager_dashboard.html
+++ b/app/propmanagement/core/templates/core/property_manager_dashboard.html
@@ -11,7 +11,7 @@
     <nav class="bg-green-500 p-4">
         <div class="container mx-auto">
             <div class="flex justify-between items-center">
-                <h1 class="text-white text-2xl font-bold">Property Management</h1>
+                <a class="text-white text-2xl font-bold" href="{% url 'core:index' %}">Property Management</a>
                 <div>
                     <a href="#" class="text-white hover:underline">Profile</a>
                     <a href="{% url 'core:logout' %}" class="text-white ml-4 hover:underline">Logout</a>
