--- a/app/propmanagement/core/templates/core/index.html
+++ b/app/propmanagement/core/templates/core/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100">
     <header class="bg-green-500 text-white text-center py-4">
-        <h1 class="text-3xl font-bold">Welcome to Property Management</h1>
+        <a class="text-3xl font-bold" href="{% url 'core:index' %}"><h1>Welcome to Property Management</h1></a>
         <h2>{{request.user.username}}</h2>
     </header>
     <nav class="flex justify-center my-4">
@@ -43,5 +43,6 @@
     <footer class="bg-gray-800 text-white text-center py-4">
         <p>&copy; 2024 Property Management. All rights reserved.</p>
     </footer>
+    <p class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline bg-gray-100 hidden"></p>
 </body>
 </html>
