--- a/app/propmanagement/core/templates/core/tenant_dashboard.html
+++ b/app/propmanagement/core/templates/core/tenant_dashboard.html
@@ -11,7 +11,7 @@
     <nav class="bg-green-500 p-4">
         <div class="container mx-auto">
             <div class="flex justify-between items-center">
-                <h1 class="text-white text-2xl font-bold">Property Management</h1>
+                <a class="text-white text-2xl font-bold" href="{% url 'core:index' %}">Property Management</a>
                 <div>
                     <a href="#" class="text-white hover:underline">Profile</a>
                     <a href="{% url 'core:logout' %}" class="text-white ml-4 hover:underline">Logout</a>
@@ -40,6 +40,22 @@
                     </div>
                     {% empty %}
                     <p>No properties rented.</p>
+                    {% endfor %}
+                </div>
+
+                <div class="bg-gray-100 p-4 rounded-lg">
+                    <h3 class="text-xl font-semibold mb-2">Maintanance Requests</h3>
+                    {% for prop in tenant.properties.all %}
+                        {% for req in prop.maintanance_requests.all %}
+                            <div class="mb-4">
+                                <p><strong>Type:</strong> {{ req.typ }}</p>
+                                <p><strong>Description:</strong> {{ req.description }}</p>
+                                <hr class="my-2">
+                            </div>
+                            {% empty %}
+                            <p>No maintanance requests.</p>
+                        {% endfor %}
+                    
                     {% endfor %}
                 </div>
             </div>
