--- a/app/propmanagement/core/templates/core/property_manager_dashboard.html
+++ b/app/propmanagement/core/templates/core/property_manager_dashboard.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load user_filter %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,11 @@
             <div class="flex justify-between items-center">
                 <a class="text-white text-2xl font-bold" href="{% url 'core:index' %}">Property Management</a>
                 <div>
-                    <a href="#" class="text-white hover:underline">Profile</a>
+                    {% if request.user|has_group:"Managers" %}
+                    <a href="{% url 'core:property_manager_profile' request.user.pk %}" class="text-white hover:underline">Profile</a>
+                    {% else %}
+                    <a href="{% url 'core:tenant_profile' request.user.pk %}" class="text-white hover:underline">Profile</a>
+                    {% endif %}
                     <a href="{% url 'core:logout' %}" class="text-white ml-4 hover:underline">Logout</a>
                 </div>
             </div>
@@ -43,6 +48,7 @@
                             <td class="py-2 px-4 border-b border-gray-200">
                                 <a href="{% url 'core:edit_property' property.id %}" class="text-blue-500 hover:underline">Edit</a>
                                 <a href="{% url 'core:delete_property' property.id %}" class="text-red-500 hover:underline ml-4">Delete</a>
+                                <a href="{% url 'core:property_detail' property.id %}" class="text-green-500 hover:underline ml-4">View</a>
                             </td>
                         </tr>
                         {% endfor %}
