--- a/app/propmanagement/core/templates/core/tenant_dashboard.html
+++ b/app/propmanagement/core/templates/core/tenant_dashboard.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load user_filter %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,11 @@
             <div class="flex justify-between items-center">
                 <a class="text-white text-2xl font-bold" href="{% url 'core:index' %}">Property Management</a>
                 <div>
-                    <a href="#" class="text-white hover:underline">Profile</a>
+                    {% if request.user|has_group:"Managers" %}
+                    <a href="{% url 'core:property_manager_profile' request.user.pk %}" class="text-white hover:underline">Profile</a>
+                    {% else %}
+                    <a href="{% url 'core:tenant_profile' request.user.pk %}" class="text-white hover:underline">Profile</a>
+                    {% endif %}
                     <a href="{% url 'core:logout' %}" class="text-white ml-4 hover:underline">Logout</a>
                 </div>
             </div>
