--- a/app/propmanagement/core/templates/core/tenant_dashboard.html
+++ b/app/propmanagement/core/templates/core/tenant_dashboard.html
@@ -42,6 +42,7 @@
                         {% endfor %}
                     
                     {% endfor %}
+                    <a class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700" href="{% url 'core:add_maintanance_request' %}">Add new Maintanance Request</a>
                 </div>
             </div>
         </div>
