--- a/app/propmanagement/core/templates/core/index.html
+++ b/app/propmanagement/core/templates/core/index.html
@@ -27,10 +27,7 @@
                     <a href="{% url 'core:logout' %}" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-700">Logout</a>
                 </li>
             {% else %}
-            
-            <li>
-                <a href="{% url 'core:tenant_register' %}" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-700">Register</a>
-            </li>
+            <p>If you already have an account log in here:</p>
             <li>
                 <a href="{% url 'core:login' %}" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-700">Login</a>
             </li>
@@ -39,6 +36,15 @@
     </nav>
     <main class="text-center">
         <p class="text-gray-700">This is the homepage of the Property Management system.</p>
+        {% if request.user.is_authenticated %}
+        <p class="text-gray-700 text-3xl p-6">You are currently logged in as {{ request.user.username }}.</p>
+        {% else %}
+        <h1 class="text-4xl text-center">Please select one of the options below to register:</h1>
+        <div class="grid grid-cols-1 md:grid-cols-2 m-4">
+            <a class="bg-green-500 hover:bg-green-700 text-white text-center p-12 m-10 text-3xl rounded" href="{% url 'core:tenant_register' %}">Tenant</a>
+            <a class="bg-blue-500 hover:bg-blue-700 text-white text-center p-12 m-10 text-3xl rounded" href="{% url 'core:property_manager_register' %}">Property Manager</a>
+        </div>
+        {% endif %}
     </main>
     <footer class="bg-gray-800 text-white text-center py-4">
         <p>&copy; 2024 Property Management. All rights reserved.</p>
