--- a/app/propmanagement/core/templates/core/property_detail.html
+++ b/app/propmanagement/core/templates/core/property_detail.html
@@ -7,11 +7,12 @@
         <div class="bg-white shadow-md rounded-lg p-6">
             <div class="grid grid-cols-2 gap-4">
                 <div class="text-3xl font-bold mb-4">{{ property.name }}</div>
-                <div class="text-3xl font-bold mb-4">Tenant</div>
+                <div class="text-3xl font-bold mb-4">Tenants</div>
                 <div class="text-gray-700 mb-4">{{ property.address }} {{ property.state }}</div>
-                <div class="text-gray-700 mb-4">{{ property.tenant.user.first_name }} {{ property.tenant.user.last_name }}</div>
+                <div class="text-gray-700 mb-4">{% for tenant in property.tenant.all  %}<a href="{% url 'core:profile' tenant.user.pk %}">{{tenant.user.username}}</a>{% endfor %}</div>
             </div>
-            <div class="flex mb-6">
+            <div class="m-4 p-2">Number of tenants on this property: {{ property.no_of_tenants }}</div>
+            <div class="flex mb-6 mt-4">
                 <a href="{% url 'core:edit_property' property.id %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit</a>
                 <a href="{% url 'core:delete_property' property.id %}" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-4">Delete</a>
             </div>
