--- a/app/propmanagement/core/templates/core/tenant_profile_details.html
+++ b/app/propmanagement/core/templates/core/tenant_profile_details.html
@@ -7,11 +7,11 @@
 
     <div class="container mx-auto mt-10">
         <div class="bg-white shadow-md rounded-lg p-6">
-            <h2 class="text-3xl font-bold mb-4">{{ tenant.user.username }}'s Profile</h2>
-            <p class="text-gray-700 text-lg mb-4"><strong>Email:</strong> {{ tenant.user.email }}</p>
-            <p class="text-gray-700 mb-4"><strong>Phone Number:</strong> {{ tenant.phone_number }}</p>
-            <p class="text-gray-700 mb-4"><strong>Address:</strong> {{ tenant.address }}</p>
-            <p class="text-gray-700 mb-4"><strong>Rent:</strong> {{ tenant.rent }}</p>
+            <h2 class="text-3xl font-bold mb-4">{{ u.user.username }}'s Profile</h2>
+            <p class="text-gray-700 text-lg mb-4"><strong>Email:</strong> {{ u.user.email }}</p>
+            <p class="text-gray-700 mb-4"><strong>Phone Number:</strong> {{ u.phone_number }}</p>
+            <p class="text-gray-700 mb-4"><strong>Address:</strong> {{ u.address }}</p>
+            <p class="text-gray-700 mb-4"><strong>Rent:</strong> {{ u.rent }}</p>
             <div class="flex">
                 <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit Profile</a>
             </div>
