--- a/app/propmanagement/core/templates/core/property_detail.html
+++ b/app/propmanagement/core/templates/core/property_detail.html
@@ -9,7 +9,7 @@
                 <div class="text-3xl font-bold mb-4">{{ property.name }}</div>
                 <div class="text-3xl font-bold mb-4">Tenants</div>
                 <div class="text-gray-700 mb-4">{{ property.address }} {{ property.state }}</div>
-                <div class="text-gray-700 mb-4">{% for tenant in property.tenant.all  %}<a href="{% url 'core:profile' tenant.user.pk %}">{{tenant.user.username}}</a>{% endfor %}</div>
+                <div class="mb-4">{% for tenant in property.tenant.all  %}<a class="text-blue-700 hover:text-blue-900" href="{% url 'core:profile' tenant.user.pk %}">{{tenant.user.username}}, </a>{% endfor %}</div>
             </div>
             <div class="m-4 p-2">Number of tenants on this property: {{ property.no_of_tenants }}</div>
             <div class="flex mb-6 mt-4">
@@ -23,6 +23,7 @@
                         <div class="bg-yellow-100 shadow-md rounded-lg p-6 mb-2">
                             <h2 class="text-2xl font-bold mb-4">{{ req.typ }}</h2>
                             <p class="text-gray-700 mb-4">{{ req.description }}</p>
+                            <p class="text-gray-700 mb-4 text-right">{{ req }}</p>
                         </div>
                     {% endif %}
                 {% empty %}
