--- a/app/propmanagement/core/templates/core/tenant_dashboard.html
+++ b/app/propmanagement/core/templates/core/tenant_dashboard.html
@@ -6,11 +6,11 @@
 
     <div class="container mx-auto mt-10">
         <div class="bg-white shadow-md rounded-lg p-6">
-            <h2 class="text-3xl font-bold mb-4">Welcome, {{ tenant.name }}</h2>
+            <h2 class="text-3xl font-bold mb-4">Welcome, {{ tenant.user.first_name }}</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div class="bg-gray-100 p-4 rounded-lg">
                     <h3 class="text-xl font-semibold mb-2">Tenant Details</h3>
-                    <p><strong>Email:</strong> {{ tenant.email }}</p>  
+                    <p><strong>Email:</strong> {{ tenant.user.email }}</p>  
                     <p><strong>Phone Number:</strong> {{ tenant.phone_number }}</p>
                     <p><strong>Current rent:</strong> {{ tenant.rent }}$</p>
                     <p><strong>Payed:</strong> {% if tenant.payment_status %}Yes{% else %}No{% endif %}</p>
