--- a/app/propmanagement/core/templates/core/tenant_profile_details.html
+++ b/app/propmanagement/core/templates/core/tenant_profile_details.html
@@ -13,7 +13,11 @@
             <p class="text-gray-700 mb-4"><strong>Address:</strong> {{ u.address }}</p>
             <p class="text-gray-700 mb-4"><strong>Rent:</strong> {{ u.rent }}</p>
             <div class="flex">
-                <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit Profile</a>
+                {% if request.user.pk == u.user.pk %}
+                    <a href="{% url 'core:tenant_update' u.pk %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit Profile</a>
+                {% else %}
+                    <p></p>
+                {% endif %}
             </div>
         </div>
     </div>
