--- a/app/propmanagement/core/templates/core/property_manager_profile.html
+++ b/app/propmanagement/core/templates/core/property_manager_profile.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container mx-auto mt-10">
         <div class="bg-white shadow-md rounded-lg p-6">
-            <h2 class="text-3xl font-bold mb-4">{{ u.user.username }}'s Profile</h2>
+            <h2 class="text-3xl font-bold mb-4">{{ u.user.last_name }}'s Profile</h2>
             <p class="text-gray-700 text-lg mb-4"><strong>Email:</strong> {{ u.user.email }}</p>
             <p class="text-gray-700 mb-4"><strong>Phone Number:</strong> {{ u.phone_number }}</p>
             <p class="text-gray-700 mb-4"><strong>Address:</strong> {{ u.address }}</p>
@@ -21,7 +21,7 @@
                 {% endfor %}
             </ul>
             <div class="flex mt-4">
-                <a href="#" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit Profile</a>
+                <a href="{% url "core:property_manager_update" u.pk %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Edit Profile</a>
             </div>
         </div>
     </div>
